Improved style in home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <meta name="description" content="Soluciones de Video Web y VR, Desarrollo de VR/AR, Aplicaciones, Headsets, Encoding y Hosting en la nube, 360\VR, Manejo de Pagos, Análisis y Métricas, Renta y Venta de Equipo Especializado">
     <meta name="keywords" content="video, web, vr, ar, webvr, hmd, headsets, encoding, streaming, vod, 360, video 360, pagos, transmisiones, transmision en vivo, vr live, vr en vivo">
     <meta name="author" content="info@vr3.io">
-    <title>VR3 | Video Web y VR</title>
+    <title>VR3 | Evolution through technology.</title>
     <!--Open Graph Protocol-->
-    <meta property="og:title" content="VR3 | Video Web y VR" />
+    <meta property="og:title" content="VR3 | Evolution through technology." />
     <meta property="og:site_name" content="VR3 Technologies" />
     <meta property="og:type" content="image"/>
     <meta property="og:url" content="https://vr3.io" />
