--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -726,6 +726,25 @@ section {
       margin-bottom: 30px;
     }
   }
+  &#press {
+    text-align: center;
+    img {
+      position: relative;
+      margin-top: 30px;
+    }
+    .press-img{
+      width: 50%;
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-bottom: 30px;
+    }
+    .press-img-high{
+      width: 70%;
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-bottom: 30px;
+    }
+  }
 }
 @media (min-width: 767px) {
   .client-item {
@@ -735,11 +754,24 @@ section {
     margin-bottom: 15px;
   }
   .client-img-high{
-      width: 40%;
-      margin-left: 5px;
-      margin-right: 5px;
-      margin-bottom: 15px;
-    }
+    width: 40%;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 15px;
+  }
+
+  .press-img{
+    width: 60%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+  }
+  .press-img-high{
+    width: 80%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+  }
 }
 
 .timeline {
