--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -183,38 +183,72 @@
     </br>
 
     <div class="row">
-      <% @projects.each do |p| %>
-        <%= link_to project_path(p) do %>
-          <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-              <% if p.image(:standard) %>
-                <%= image_tag p.image.url %>        
-              <% else %>
-                <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
-              <% end %>
-              <div class="caption">
-                <h3><u><%= p.title %></u></h3>
-                <% end %>
-                <h4>Cliente: <%= p.client %></h4>
-                <h5>Agencia: <%= p.provider %></h5>
-                <h5><%= p.date %></h5>
-                <p><%= markdown(p.description.truncate(90)) %></p>
-                <% if user_signed_in? %>
-                    <br>
-                    <%= link_to 'Edit', edit_project_path(p) %>
-                    <%= link_to 'Delete', project_path(p), method: :delete %>
-                <% end %>
+      <div class="container">
+          <% @projects.each do |p| %>
+            <%= link_to project_path(p) do %>
+              <div class="col-sm-4 col-md-4">
+                  <div class="thumbnail">
+                      <% if p.image.url %>
+                          <%= image_tag p.image.url %>        
+                      <% else %>
+                          <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+                      <% end %>
+                      <div class="caption">
+                          <h3><u><%= p.title %></u></h3>
+                          <h4>Cliente: <%= p.client %></h4>
+                          <h5>Agencia: <%= p.provider %></h5>
+                          <h5><%= p.date %></h5>
+                          <p><%= markdown(p.description.truncate(90))%></p>
+                      </div>
+                  </div>
               </div>
-            </div>
-          </div>
-      <% end %>
+            <% end %>
+          <% end %>
+      </div>
     </div>
     
     <br/>
   </div>
 </section>
+
 <!-- Press Section class="bg-light-gray" -->
-<section id="press">
+<!-- Clients Section -->
+<section id="press" class="bg-light-gray">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Prensa</h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+      </div>
+    </div>
+    <br/>
+    <div class="row" id="press"> 
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://www.reforma.com/aplicacioneslibre/preacceso/articulo/default.aspx?id=1145805&v=3&urlredirect=http://www.reforma.com/aplicaciones/articulo/default.aspx?id=1145805&v=3', target: "_blank" do %>
+           <%= image_tag "press/reforma.png", class: "press-img-high" %>
+        <% end %>
+        
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://expansion.mx/emprendedores/2017/06/25/mexico-obtiene-10-preseas-en-cannes-lions-2017', target: "_blank" do %>
+          <%= image_tag "press/expansion.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'https://www.merca20.com/entrevista-exclusiva-horacio-navarro-ceo-de-leo-burnett-habla-del-leon-de-bronce-ganado-en-cannes', target: "_blank" do %>
+          <%= image_tag "press/merca20.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://tecreview.itesm.mx/vr3-la-startup-mexicana-quiere-llevar-la-vr-limite/', target: "_blank"  do%>
+          <%= image_tag "press/tecreview.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--section id="press">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -234,4 +268,4 @@
       <% end %>
     </div>
   </div>
-</section>
+</section-->
