Precompile missing assets

--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 <!-- Subservice:Marketing Section -->
-<section id="marketing">
+<section id="ai" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -17,7 +17,7 @@
   </div>
 </section>
 <!-- Subservice:Dev Section -->
-<section id="development">
+<section id="vr">
   <div class="container">
     <div class="row">
       <div class="text-center">
@@ -27,7 +27,7 @@
   </div>
 </section>
 <!-- Subservice:Rent Section -->
-<section id="equipement" class="bg-light-gray">
+<section id="blockchain" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -37,51 +37,13 @@
     </div>
   </div>
 </section>
-<!-- Contact Section -->
-<section id="contact">
+  <!-- Subservice:Rent Section -->
+<section id="mining">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contacto</h2>
-        <h3 class="section-subheading text-subtitle-white">Escríbenos aquí, o mándanos un correo a <a href="mailto:info@vr3.io" style="color: #FFBDBE;">info@vr3.io</a></h3>
-        <br/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <form action="php/contact.php" method="post" class="validate" target="_blank" novalidate role="form" id="contactForm">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" placeholder="Nombre" id="name" required="" data-validation-required-message="Porfavor escribe tu nombre completo.">
-                <p class="help-block text-danger list-unstyled"></p>
-              </div>
-              <div class="form-group">
-                <input type="email" name="email" class="form-control" placeholder="Email" id="email" required="" data-validation-required-message="Porfavor escribe tu correo electrónico.">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <textarea type="text" name="message" class="form-control" placeholder="Mensaje" id="email" required="" data-validation-required-message="Porfavor escribe tu mensaje."></textarea> 
-                <p class="help-block text-danger"></p>
-              </div>
-              
-               <div class="checkbox">
-                <label>
-                  <input type="checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="./privacidad.html" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
-                </label>
-              </div>        
-              <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
-              <br/>
-            </div>
-            <div class="col-md-6 col-md-offset-3">
-              <div id="success"></div>
-              <div id="error"></div>
-            </div>
-            <div class="col-sm-12 text-center">
-              <button type="submit" class="btn btn-xl">Enviar</button>
-            </div>
-          </div>
-        </form>
+        <h2 class="section-heading">Minería de Criptodivisas</h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
   </div>
