--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Soluciones de Video Web y VR, Desarrollo de VR/AR, Aplicaciones, Headsets, Encoding y Hosting en la nube, 360\VR, Manejo de Pagos, Análisis y Métricas, Renta y Venta de Equipo Especializado">
-    <meta name="keywords" content="video, web, vr, ar, webvr, hmd, headsets, encoding, streaming, vod, 360, video 360, pagos, transmisiones, transmision en vivo, vr live, vr en vivo">
+    <meta name="description" content="VR3 is a Mexico City based innovation studio that develops new applications and technologies to provide added value solutions for technology driven companies and also for government organizations.
+    We offer Virtual & augmented reality, artificial intelligence, neural networks, deep learning, distributed databases services">
+    <meta name="keywords" content="video, web, vr, ar, webvr, hmd, headsets, ai, blockchain, block chain, cryptocurrency, bitcoin, ethereum, payments, pagos, transmisiones, transmision en vivo, vr live, vr en vivo, deep learning, machine learning, trading">
     <meta name="author" content="info@vr3.io">
     <title>VR3 | Evolution through technology.</title>
     <!--Open Graph Protocol-->
