Added services to services page.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -519,10 +519,6 @@ position: relative;
   }
 }
 
-
-
-
-
   div#full-orange{ 
     .intro-text {
       padding-top: 100px;
@@ -964,6 +960,12 @@ section {
   p {
     margin-top: 0;
   }
+}
+
+.service-img{
+    width: 70%;
+    margin-top: 25px;
+    margin-left: 25px;
 }
 
 
