--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -12,7 +12,8 @@
 		<h3>Compañia</h3>
 		<div class="bio">
       <p class="lead"><strong><%= link_to "VR3", root_path %></strong> es un estudio de innovación basado en la Ciudad de México<a href="https://goo.gl/maps/SXjjxz3Yrf92">,</a> que desarrolla aplicaciones que agregan valor a compañias manejadas por la tecnología y a organizaciones gubernamentales.</p>
-      <p class="lead">Con más de 4 años operando, <%= link_to "VR3", root_path %> sobresale como una compañia exitosa de desarrollo tecnológico.</p>
+      <p class="lead">Con más de 4 años operando, <strong><%= link_to "VR3", root_path %></strong> sobresale como una compañia exitosa de desarrollo tecnológico.</p>
+      <%= link_to 'Descarga el Kit de Prensa', 'http://static.vr3.io/vr3/press/VR3_PressKit_2017.zip' , class: "lead" %>
 		</div>
     <br>
 		
@@ -28,6 +29,7 @@
 			<ul class="list-inline social-buttons">
         <li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/oscarchavezromero/"><i class="fa fa-linkedin"></i></a></li>
       </ul>
 		</div>
 		
@@ -54,11 +56,12 @@
 			<%= image_tag "company/rhijar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Rodrigo Hijar</h3>
 			<h5>Business Consultant & Manager</h5>
-			<p>Business Consulting. Project Management. Expansion and Growth</p>
-      <p>Client segmentation, go-to-market and commercial strategy among others.</p>
+      <p>Client segmentation. Go-to-market and commercial strategy.</p>
+      <p>Expansion. Growth</p>
 			<ul class="list-inline social-buttons">
         <!--li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li-->
         <li><a href="http://twitter.com/RodrigoHijar" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigo-hijar-35527559/"><i class="fa fa-linkedin"></i></a></li>
       </ul>
 		</div>
 		
@@ -66,10 +69,12 @@
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/rllanos.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Rodrigo Llanos</h3>
-			<h5>Finance Consultant & Compliance</h5>
+			<h5>Finance Consultant & Manager</h5>
+      <p>Financial Projections. Risk Assesment.</p>
+      <p>Compliance. Regulations.</p>
 			<ul class="list-inline social-buttons">
-        <li><a href="https://twitter.com/rodrigollanosb" target="_blank"><i class="fa fa-twitter"></i></a>
-        </li>
+        <li><a href="https://twitter.com/rodrigollanosb" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigollanosb/"><i class="fa fa-linkedin"></i></a></li>
       </ul>
 		</div>
   </div>
