--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -5,45 +5,74 @@
     </div>
   </div>
 </div>
-<!-- Subservice:Marketing Section -->
+<!-- Subservice:AI Section -->
 <section id="ai" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Automatización e Inteligencia Artificial </h2>
-        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+        <h2>Automatización e Inteligencia Artificial </h2>
+      </div>
+      </br>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <%= image_tag 'services/ai.png', :class => "service-img"%>
+      </div>
+      <div class="col-lg-9 col-md-9 col-sm-6">
+        <p>Dada la complejidad que existe aún, implementar un Sistema de Aprendizaje No Supervisado que sea muy robusto, requiere de muchos recursos en la nube, lo cual es bastante costo. Sin embargo hemos encontrado soluciones que no requieren de Internet para funcionar.</p>
+        <p>Es decir, de forma local un procesador pueda reconocer un perro en una imagen o una palabra, una acción no literal. Todo esto para crear herramientas de análisis de datos, predicción de patrones, y procesamiento de lenguaje. Hemos trabajado solucionando procesos médicos, educativos, de seguridad y preservación de patrimonio literario y visual</p>
       </div>
     </div>
   </div>
 </section>
-<!-- Subservice:Dev Section -->
+<!-- Subservice:VRAR Section -->
 <section id="vr">
   <div class="container">
     <div class="row">
-      <div class="text-center">
-        <h2 class="section-heading">Aplicaciones de VR y AR</h2>
+      <div class="col-lg-12 text-center">
+        <h2>Aplicaciones de VR & AR</h2>
+      </div>
+      </br>
+      <div class="col-lg-9 col-md-9 col-sm-6">
+        <p>Tenemos potencial para beneficiar a muchas personas con el uso adecuado de los inventos tecnológicos, como por ejemplo nuestro último proyecto con <a href="https://vr3.io/projects/gear-vr-phantom-limb-therapy">Samsung: Phantom Limb</a>, que consiste en facilitar el acceso a terapias inmersivas que liberen el estrés neurológico causado por el Síndrome del miembro fantasma. </p>
+        <p>En <%= link_to 'VR3', root_path %> siempre buscamos resolver problemas reales, cuya solución tenga siempre un impacto positivo.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <%= image_tag 'services/vrar.png', :class => "service-img"%>
       </div>
     </div>
   </div>
 </section>
-<!-- Subservice:Rent Section -->
+<!-- Subservice:Blockchain  -->
 <section id="blockchain" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Desarrollo de Bases de Datos Distribuidas</h2>
-        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+        <h2>Blockchain y Smart Contracts</h2>
+      </div>
+      </br>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <%= image_tag 'services/blockchain.png', :class => "service-img"%>
+      </div>
+      <div class="col-lg-9 col-md-9 col-sm-6">
+        <p>Una cripto divisa en términos simples es una moneda digital. Una moneda validada por miles de servidores alrededor del mundo. Esta moneda depende de un sistema de comunicación similar al internet, pero mucho más eficiente. En México el conocimiento y desarrollo de esta tecnología financiera es muy limitado.</p>
+        <p>En <%= link_to 'VR3', root_path %> hemos explorado las posibilidades de uso contra la malversación de fondos, la ineficiencia burocrática, y la transparencia de datos, todo por medio del  <i>blockchain</i> (cadena de bloques que valida las criptodivisas) y la distribución descentralizada. Queremos ayudar a reducir las comisiones en sistemas financieros, hacer más seguro el intercambio de valores y abrir el acceso a servicios financieros a la población desbancarizada..</p>
       </div>
     </div>
   </div>
 </section>
-  <!-- Subservice:Rent Section -->
+  <!-- Subservice:Crypto Section -->
 <section id="mining">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Minería de Criptodivisas</h2>
-        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+        <h2>Extracción de Criptodivisas</h2>
+      </div>
+      </br>
+      <div class="col-lg-9 col-md-9 col-sm-6">
+        <p>La minería de divisas es un proceso de esfuerzo ininterrumpido por lo que nuestros servidores y equipo de procesamiento debe correr 24/7 bajo un esquema constante de suministro de energía y mantenimiento.</p>
+        <p>En <%= link_to 'VR3', root_path %> hemos implementado de manera exitosa desde una sola máquina hasta una pequeña red de mineros, todos montados sobre la Red de Ethereum.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <%= image_tag 'services/cryptocurrency.png', :class => "service-img"%>
       </div>
     </div>
   </div>
