--- a/app/views/partials/_contact.html.erb
+++ b/app/views/partials/_contact.html.erb
@@ -30,17 +30,12 @@
             <div class="form-group">
               <select class="form-control" name="budget" id="budget" required>
                 <option value=" " disabled selected hidden>Presupuesto </option>
-                <option value="1">< 10,000 USD</option>
+                <option value="0">< 5,000 USD</option>
+                <option value="1">5,000 - 10,000 USD</option>
                 <option value="2">10,000 - 30,000 USD</option>
                 <option value="3">> 30,000 USD</option>
               </select>
             </div>
-            <!--div class="form-group text-center" style="color: white;">
-              <label class="radio-inline"><strong>Presupuesto:</strong></label>
-              <label class="radio-inline"><input type="radio" name="optradio" value="1">< 10,000 USD</label>
-              <label class="radio-inline"><input type="radio" name="optradio" value="2">10,000 - 30,000 USD</label>
-              <label class="radio-inline"><input type="radio" name="optradio" value="3">> 30,000 USD</label>
-            </div-->
             <div class="form-group">
               <textarea type="text" name="message" class="form-control" placeholder="Mensaje *" id="message" required></textarea> 
             </div>       
