Fixed job page bug

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -5,8 +5,8 @@
       <div class="col-md-4 col-sm-4">
         <h3>EMPRESA</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="/company"><li>Empresa</li></a>
-          <a href="/jobs"><li>Trabaja en VR3</li></a>
+          <a href="/company"><li>Equipo</li></a>
+          <a href="/jobs"><li>Trabajo</li></a>
           <%= link_to "Contacto", root_path(:anchor => "contact") %>
         </ul>
       </div>
@@ -15,13 +15,14 @@
         <ul class="list-unstyled quicklinks">
           <a href="/services"><li>VR & AR </li></a>
           <a href="/services"><li>ML & AI</li></a>
-          <a href="/services"><li>Blockchain</li></a>
+          <a href="/services"><li>Blockchain<li></a>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
       <h3>COMUNIDAD</h3>
         <ul class="list-unstyled quicklinks">
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
+          <a href="http://static.vr3.io/vr3/press/VR3_PressKit_2017.zip" target="_blank"><li>Press Kit</li></a>
           <!--a href="http://shop.vr3.io" target="_blank"><li>Tienda</li></a-->
           <!--a href="http://blog.vr3.io" target="_blank"><li>Blog</li></a-->
           <!--a href="/press"><li>Prensa</li></a-->
