Added Roberto as out Technical Advisor in company section

--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -24,7 +24,7 @@
 			<h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
       <h5>Fullstack Developer & SysAdmin</h5>
 			<p>Architecture. Engineering. Innovation. Admin.</p>
-			<p>RoR. JS. C#. REST/API. SQL. Bash/UNIX</p>
+			<p>RoR. Node. Js. C#. REST/API. SQL. Bash/UNIX</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
         <li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -45,12 +45,47 @@
 			<ul class="list-inline social-buttons">
         <li><a href="http://instagram.com/patrick_mss" target="_blank"><i class="fa fa-instagram"></i></a>
         </li>
+        <li><a href="https://twitter.com/Mosstachio" target="_blank"><i class="fa fa-twitter"></i></a>
+        </li>
       </ul>
 		</div>
   </div>  
   </br></br>
   <div class="row text-center">
-	
+    <!--Gustavo L'Eglise-->
+    <div class="col-sm-6 col-md-6">
+      <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+      <h3>Gustavo L'Eglise</h3>
+      <h5>Frontend Developer</h5>
+      <p>Unity3D Developer. Web Developer</p>
+      <p>MEAN. Unity3D. C#. Js</p>
+      <ul class="list-inline social-buttons">
+        <li><a href="https://www.linkedin.com/in/gustavoleglise" target="_blank"><i class="fa fa-linkedin"></i></a>
+        </li>
+        <!--li><a href="https://github.com/GustavoLeglise" target="_blank"><i class="fa fa-github"></i></a>
+        </li-->
+      </ul>
+    </div>
+
+		<!--Roberto Ramos-->
+		<div class="col-sm-6 col-md-6">
+			<%= image_tag "company/bob.png", :class => "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+			<h3>Roberto Ramos</h3>
+      <h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
+			<h5>Technical Advisor</h5>
+			<p>Machine Learning. Computer Vision. Data Science</p>
+			<p>Unity3D. C++. Python. Tensorflow. Keras. MatLab</p>
+			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
+			<ul class="list-inline social-buttons">
+        <li><a href="https://github.com/broyson" target="_blank"><i class="fa fa-github"></i></a>
+        </li>
+      </ul>
+		</div>
+
+
+  </div>
+  <br><br>
+  <div class="row text-center">
     <!--Rodrigo Hijar-->
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/rhijar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
@@ -77,53 +112,22 @@
         <li><a href="https://www.linkedin.com/in/rodrigollanosb/"><i class="fa fa-linkedin"></i></a></li>
       </ul>
 		</div>
-  </div>
+	</div>
   <br><br>
   <div class="row text-center">
-
-    <!--Gustavo L'Eglise-->
-    <div class="col-sm-6 col-md-6">
-      <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
-      <h3>Gustavo L'Eglise</h3>
-      <h5>Frontend Developer</h5>
-      <p>Unity3D Developer. Web Developer</p>
-      <p>MEAN. Unity3D. C#.</p>
-      <ul class="list-inline social-buttons">
-        <!--li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a>
-        </li>
-        <!--li><a href="http://instagram.com/oschvr" target="_blank"><i class="fa fa-instagram"></i></a>
-        </li-->
-      </ul>
-    </div>
-
     <!--Rodrigo Moreno-->
     <div class="col-sm-6 col-md-6">
       <%= image_tag "company/rodrigo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
       <h3>Rodrigo Moreno</h3>
       <h5>3D Artist & Motion Graphics</h5>
-      <p>Cofounder @ <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></p>
+      <p>Cofundador <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></p>
       <p>Maya. C4D. Ps. Ai. Ae.</p>
       <ul class="list-inline social-buttons">
-        <li><a href="http://www.estudiocromosoma.com" target="_blank"><i class="fa fa-hand-pointer-o"></i></a>
-        </li>
+        <!--li><a href="http://www.estudiocromosoma.com" target="_blank"><i class="fa fa-hand-pointer-o"></i></a>
+        </li-->
         <li><a href="http://twitter.com/CromosomaMX" target="_blank"><i class="fa fa-twitter"></i></a>
         </li>
       </ul>
     </div>
-        
-		<!--Roberto Ramos-->
-		<!--div class="col-sm-6 col-md-4">
-			<%= image_tag "company/bob.png", :class => "img-responsive img-circle" %>
-			<h3>Roberto Ramos</h3>
-			<h5>Comevergas</h5>
-			<p>Director Tecnología. Desarrollador Principal. </p>
-			<p>Unity3D. C#. C++. PHP. Python</p>
-			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
-			<ul class="list-inline social-buttons">
-        <li><a href="http://twitter.com/ostocino" target="_blank"><i class="fa fa-twitter"></i></a>
-        </li>
-      </ul>
-		</div-->
-	</div>
-  <br>
+  </div>
 </div>
