--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -14,6 +14,11 @@
         <%= form_for @job do |p| %>
 
           <div class="form-group">
+            <p>Imagen de la Vacante (562x387, JPG, PNG)</p>
+            <%= p.file_field :picture, :placeholder => "Imagen" %>
+          </div>
+        
+          <div class="form-group">
             <%= p.text_field :position, autofocus: true, :class => "form-control validate", :placeholder => "Posición"%>
           </div>
 
@@ -26,19 +31,24 @@
           </div>
 
           <div class="form-group">
-            <%= p.text_field :type, autofocus: true, :class => "form-control validate", :placeholder => "Tipo"%>
+            <div class="input-group">
+              <span class="input-group-addon">Descripción (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+              <%= p.text_area :overview, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 5, cols: 10 %>
+            </div>
           </div>
 
           <div class="form-group">
-            <%= p.text_area :overview, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 5, cols: 10 %>
+            <div class="input-group">
+              <span class="input-group-addon">Responsabilidades (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+              <%= p.text_area :responsabilities, autofocus: true, :class => "form-control validate", :placeholder => "Responsabilidades", rows: 5, cols: 10 %>
+            </div>
           </div>
 
           <div class="form-group">
-            <%= p.text_area :responsabilities, autofocus: true, :class => "form-control validate", :placeholder => "Responsabilidades", rows: 5, cols: 10 %>
-          </div>
-
-          <div class="form-group">
-            <%= p.text_area :qualifications, autofocus: true, :class => "form-control validate", :placeholder => "Cualidades Deseables", rows: 5, cols: 10 %>
+            <div class="input-group">
+              <span class="input-group-addon">Cualidades (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+              <%= p.text_area :qualifications, autofocus: true, :class => "form-control validate", :placeholder => "Cualidades Deseables", rows: 5, cols: 10 %>
+            </div>
           </div>
 
           <%= link_to("Cancelar", jobs_path , class: "btn btn-lg btn-danger") %>
