--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="VR3 is a Mexico City based innovation studio that develops new applications and technologies to provide added value solutions for technology driven companies and also for government organizations.
-    We offer Virtual & augmented reality, artificial intelligence, neural networks, deep learning, distributed databases services">
+    <meta name="description" content="VR3 is a Mexico City based innovation studio that develops new applications and technologies to provide added value solutions for technology driven companies and also for government organizations. We offer Virtual & augmented reality, artificial intelligence, neural networks, deep learning, distributed databases services">
     <meta name="keywords" content="video, web, vr, ar, webvr, hmd, headsets, ai, blockchain, block chain, cryptocurrency, bitcoin, ethereum, payments, pagos, transmisiones, transmision en vivo, vr live, vr en vivo, deep learning, machine learning, trading">
     <meta name="author" content="info@vr3.io">
     <title>VR3 | Evolution through technology.</title>
@@ -32,12 +29,10 @@
     <!--link href="css/main.css" rel="stylesheet"-->
     <!-- Custom Fonts -->
     <!--link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-      <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css"-->
-    <!--reCaptcha-->
-    <!--script src='https://www.google.com/recaptcha/api.js'></script-->
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css"-->
     <!--Slick Carousel-->
     <!--link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/-->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -57,17 +52,13 @@
   <%= render partial: "partials/footer" %>
 
 </html>
-
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-73304631-3', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 
