--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -13,7 +13,7 @@
     <div class="col-lg-12 col-md-12">
       <div class="panel panel-default">
         <div class="panel-body">
-            <div class="row">heroku 
+            <div class="row">
               <div class="col-lg-6 col-md-6">
               <% if @job.picture.url %>
                 <%= image_tag @job.picture.url, :class => "img-responsive"%> 
