--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -116,18 +116,16 @@
   <br><br>
   <div class="row text-center">
     <!--Rodrigo Moreno-->
-    <div class="col-sm-6 col-md-6">
+    <!--div class="col-sm-6 col-md-6">
       <%= image_tag "company/rodrigo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
       <h3>Rodrigo Moreno</h3>
       <h5>3D Artist & Motion Graphics</h5>
       <p>Cofundador <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></p>
       <p>Maya. C4D. Ps. Ai. Ae.</p>
       <ul class="list-inline social-buttons">
-        <!--li><a href="http://www.estudiocromosoma.com" target="_blank"><i class="fa fa-hand-pointer-o"></i></a>
-        </li-->
         <li><a href="http://twitter.com/CromosomaMX" target="_blank"><i class="fa fa-twitter"></i></a>
         </li>
       </ul>
-    </div>
+    </div-->
   </div>
 </div>
