--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<div id="full-blue">
+<div id="full-orange">
   <div class="container">
     <div class="intro-text">
       <div class="intro-heading">Trabaja con nosotros.</div>
@@ -7,47 +7,34 @@
 </div>
 <br>
 <div class="container">
-  <div class="row text-center">
-    <h3>Vacantes</h3>
-    <div class="text-center bio">
-      <p>En <strong><%= link_to "VR3", root_path %></strong> siempre estamos buscando mentes creativas. Descubre más sobre las vacantes abiertas.</p>
-    </div>
-    <% if @jobs.exists? %>
-      <% @jobs.each do |j| %>
-        <div class="col-sm-6 col-md-6">
-          <div class="thumbnail">
-            <% if j.picture.url %>
-              <%= image_tag j.picture.url, :class => "img-responsive" %>
+  <div class="row">
+    <div class="col-sm-12 col-md-12">
+      <h3 class="text-center">Vacantes</h3>
+      <div class="text-center bio">
+        <p>En <strong><%= link_to "VR3", root_path %></strong> siempre estamos buscando mentes creativas. Descubre más sobre las vacantes abiertas.</p>
+      </div>
+      <% if @jobs.exists? %>
+      <ul class="list-group">
+        <% @jobs.each do |j| %>
+          <li class="list-group-item">
+            <h3><%= j.department %></h3>
+            <%= link_to job_path(j) do %> 
+              <h4><%= j.position %> </h4>
             <% end %>
-            <h3><%= link_to j.position, job_path(j) %></h3>
-            <% if j.location %>
-              <h4 class="project-label"> <%= j.location %></h4>
-            <% end %>
-            <% if j.overview %>  
-              <p><%= markdown(j.overview.truncate(180)) %></p>
-            <% end %>
-            <% if j.responsabilities %>  
-              <p><%= markdown(j.responsabilities.truncate(180)) %></p>
-            <% end %>
-            <% if j.qualifications %>  
-              <p><%= markdown(j.qualifications.truncate(180)) %></p>
-            <% end %>
-            <!--p><%= markdown(j.qualifications.truncate(180)) %></p>
-            <p><%= markdown(j.responsabilities.truncate(180)) %></p-->
-            <h4><%= link_to 'Leer más', job_path(j) %></h4>
+            <h6><%= j.location%> | <%= j.department %> | <%= j.commitment %></h6>
             <% if user_signed_in? %>
               <% if current_user.username == "oschvr" %>
                 <%= link_to 'Editar', edit_job_path(j), :class => "text-center" %>
                 <%= link_to 'Eliminar', job_path(j), method: :delete, :class => "text-center" %>
               <% end %>
             <% end %>
-            </br>
-          </div>
-        </div>
+          </li>
+        <% end %>
+      </ul>
+      <% else %>
+        <p>Por el momento no tenemos vacantes abiertas.</p>
+        <p>Regresa pronto !</p>
       <% end %>
-    <% else %>
-      <p>Por el momento no tenemos vacantes abiertas.</p>
-      <p>Regresa pronto !</p>
-    <% end %>
+    </div>
   </div>
 </div>
