--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,12 +14,9 @@
       <div class="panel panel-default">
         <div class="panel-body">
             <div class="row">
-              <div class="col-lg-6 col-md-6">
-              <% if @job.picture.url %>
-                <%= image_tag @job.picture.url, :class => "img-responsive"%> 
-              <% end %>
-              </div>
-              <div class="col-lg-6 col-md-6">
+              <div class="col-lg-12 col-md-12">
+                <h2><u><%= @job.position%></u></h2>
+                <h4><%= @job.department %> | <%= @job.commitment %></h4>
                 <% if @job.location %>
                   <h4>Ubicación: <%= @job.location %></h4>
                 <% end %>
@@ -29,6 +26,7 @@
                 <p><u><strong>Descripción:</strong></u> <%= markdown(@job.overview) %></p>
                 <p><u><strong>Responsabilidades:</strong></u> <%= markdown(@job.responsabilities) %></p>
                 <p><u><strong>Requisitos:</strong></u> <%= markdown(@job.qualifications) %></p>
+                <br>
                 <%=  mail_to "jobs@vr3.io", 'Aplica aqui', :cc => "info@vr3.io", :subject => "JOB Application @ VR3: " + @job.position %> 
                 <small> (Recuerda tener a la mano tu CV en formato PDF)</small>
               </div>
