--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -37,7 +37,7 @@
       <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
         <ul class="list-inline social-buttons">
           <li>
-          <a href="http://twitter.com/vr3io" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="http://github.com/VR3" target="_blank"><i class="fa fa-github"></i></a>
           </li>
           <li>
           <a href="http://facebook.com/vr3io" target="_blank"><i class="fa fa-facebook"></i></a>
