--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,11 @@
-<div id="projectspage"></div>
-
-<div id="full-yellow">
+<div id="full-orange">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading">Proyectos</div>
+      <div class="intro-heading">Nuestro trabajo.</div>
     </div>
   </div>
 </div>
+<br>
 <div class="row">
     <div class="container">
         <% @projects.each do |p| %>
@@ -14,9 +13,7 @@
             <div class="col-sm-4 col-md-4">
                 <div class="thumbnail">
                     <% if p.image.url %>
-                        <%= image_tag p.image.url %>        
-                    <% else %>
-                        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+                        <%= image_tag p.image.url %>                
                     <% end %>
                     <div class="caption">
                         <h3><u><%= p.title %></u></h3>
