--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -12,61 +12,48 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12">
         <%= form_for @job do |p| %>
-
-        <%= image_tag("http://www.static.vr3.io/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
-          </br>
-          </br>
-
+  
           <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Posición</span>
-              <%= p.text_field :position, autofocus: true, :class => "form-control validate"%>
-            </div>        
-          </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Ubicación</span>
-              <%= p.text_field :location, autofocus: true, :class => "form-control validate"%>
-            </div>        
-          </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Salario</span>
-              <%= p.text_field :salary, autofocus: true, :class => "form-control validate"%>
-            </div>        
-          </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Tipo</span>
-              <%= p.text_field :type, autofocus: true, :class => "form-control validate"%>
-            </div>        
-          </div>
-
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Descripción</span>
-              <%= p.text_area :overview, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
-            </div>        
-          </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Responsabilidades</span>
-              <%= p.text_area :responsabilities, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
-            </div>        
-          </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">Cualidades Deseables</span>
-              <%= p.text_area :qualifications, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
-            </div>        
-          </div>
-
+              <%= p.text_field :position, autofocus: true, :class => "form-control validate", :placeholder => "Posición"%>
+            </div>
+  
+            <div class="form-group">
+              <%= p.text_field :location, autofocus: true, :class => "form-control validate", :placeholder => "Ubicación"%>
+            </div>
+  
+            <div class="form-group">
+              <%= select_tag :department, options_for_select([['Departamento', 'departmento'], ['Desarrollo', 'desarrollo'], ['Finanzas', 'finanzas'], ['Administración', 'administracion'], ['Soporte', 'soporte']], 'departamento'), :class => "form-control" %>
+            </div>
+  
+            <div class="form-group">
+              <%= select_tag :commitment, options_for_select([['Tipo de Trabajo', 'tipo'], ['Tiempo Completo', 'completo'], ['Medio Tiempo', 'medio'], ['Remoto', 'remoto'], ['Consultoría', 'consultor']], 'tipo'), :class => "form-control" %>
+            </div>
+  
+            <div class="form-group">
+              <%= p.text_field :salary, autofocus: true, :class => "form-control validate", :placeholder => "Salario"%>
+            </div>
+  
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-addon">Descripción (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+                <%= p.text_area :overview, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 5, cols: 10 %>
+              </div>
+            </div>
+  
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-addon">Responsabilidades (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+                <%= p.text_area :responsabilities, autofocus: true, :class => "form-control validate", :placeholder => "Responsabilidades", rows: 5, cols: 10 %>
+              </div>
+            </div>
+  
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-addon">Cualidades (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
+                <%= p.text_area :qualifications, autofocus: true, :class => "form-control validate", :placeholder => "Cualidades Deseables", rows: 5, cols: 10 %>
+              </div>
+            </div>
+  
 
           <%= link_to("Cancelar", @job , class: "btn btn-lg btn-danger") %>
           <button class="btn btn-lg btn-primary float-right" type="submit" name="action">Actualizar Vacante</button>
