Added a row of press articles. Order projects desc.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -211,8 +211,31 @@
         <% end %>
       </div>
       <div class="col-xs-6 col-sm-6 col-md-3">
-        <%= link_to 'http://tecreview.itesm.mx/vr3-la-startup-mexicana-quiere-llevar-la-vr-limite/', target: "_blank"  do%>
+        <%= link_to 'http://tecreview.itesm.mx/9-egresados-del-tec-estan-rompiendola-en-mexico-mundo/', target: "_blank"  do%>
           <%= image_tag "press/tecreview.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="row" id="press"> 
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://www.roastbrief.com.mx/2017/06/ganadores-latinos-en-pharma-cannes-lions-2017-latinosencannes/', target: "_blank" do %>
+           <%= image_tag "press/roastbrief.png", class: "press-img-high" %>
+        <% end %>
+        
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://www.parentesis.com/apple/noticias/Samsung_Gear_VR_ayuda_al_sindrome_del_miembro_fantasma', target: "_blank" do %>
+          <%= image_tag "press/parentesis.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'https://news.samsung.com/mx/samsung-gear-vr-el-poder-de-la-realidad-virtual-busca-apoyar-al-campo-medico', target: "_blank" do %>
+          <%= image_tag "press/samsungnews.png", class: "press-img-high" %>
+        <% end %>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-3">
+        <%= link_to 'http://www.uc.edu.mx/mxvr-el-vr-como-herramienta-de-transformacion-social/', target: "_blank"  do%>
+          <%= image_tag "press/uc.png", class: "press-img-high" %>
         <% end %>
       </div>
     </div>
