Added Discovery Logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,7 +82,7 @@
       </div>
       <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
-          <%= image_tag "clients/coca.png", class: "client-img-high" %>
+          <%= image_tag "clients/discovery.png", class: "client-img-high" %>
         </a>
       </div>
     </div>
@@ -104,14 +104,14 @@
       </div>
       <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
-          <%= image_tag "clients/purina.png", class: "client-img" %>
+          <%= image_tag "clients/coca.png", class: "client-img" %>
         </a>
       </div>
     </div>
     <div class="row" id="portfolio"> 
       <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
-           <%= image_tag "clients/coppel.png", class: "client-img" %>
+           <%= image_tag "clients/purina.png", class: "client-img" %>
         </a>
       </div>
       <div class="col-xs-6 col-sm-6 col-md-3">
